--- a/docs/post/2021-12-05-analysis/index.Rmd
+++ b/docs/post/2021-12-05-analysis/index.Rmd
@@ -4,13 +4,13 @@ author: goettlic
 date: '2021-12-05'
 slug: []
 categories:
-  - Data
+  - MOFgeoDB
   - Analysis
 tags:
   - data
   - database
 subtitle: ''
-description: ''
+description: 'Analysis approaches with data of the MOF'
 image: 'img/DJI_0116.JPG'
 toc: yes
 output:
